@@ -85,10 +85,10 @@ public class RuleDAO extends AuditableEntityDAO<RuleBean> {
 
         HashMap<Integer, Object> variables = new HashMap<Integer, Object>();
         HashMap<Integer, Integer> nullVars = new HashMap<>();
-        variables.put(new Integer(1), ruleBean.getName());
-        variables.put(new Integer(2), ruleBean.getDescription());
-        variables.put(new Integer(3), ruleBean.getUpdaterId());
-        variables.put(new Integer(4), ruleBean.getId());
+        variables.put(Integer.valueOf(1), ruleBean.getName());
+        variables.put(Integer.valueOf(2), ruleBean.getDescription());
+        variables.put(Integer.valueOf(3), ruleBean.getUpdaterId());
+        variables.put(Integer.valueOf(4), ruleBean.getId());
         getExpressionDao().update(ruleBean.getExpression());
 
         this.executeUpdate(digester.getQuery("update"), variables, nullVars);
@@ -105,14 +105,14 @@ public class RuleDAO extends AuditableEntityDAO<RuleBean> {
         HashMap<Integer, Object> variables = new HashMap<>();
         HashMap<Integer, Integer> nullVars = new HashMap<>();
 
-        variables.put(new Integer(1), ruleBean.getName());
-        variables.put(new Integer(2), ruleBean.getDescription());
-        variables.put(new Integer(3), ruleBean.getOid());
-        variables.put(new Integer(4), ruleBean.isEnabled());
-        variables.put(new Integer(5), getExpressionDao().create(ruleBean.getExpression()).getId());
+        variables.put(Integer.valueOf(1), ruleBean.getName());
+        variables.put(Integer.valueOf(2), ruleBean.getDescription());
+        variables.put(Integer.valueOf(3), ruleBean.getOid());
+        variables.put(Integer.valueOf(4), ruleBean.isEnabled());
+        variables.put(Integer.valueOf(5), getExpressionDao().create(ruleBean.getExpression()).getId());
 
-        variables.put(new Integer(6), new Integer(ruleBean.getOwnerId()));
-        variables.put(new Integer(7), new Integer(Status.AVAILABLE.getId()));
+        variables.put(Integer.valueOf(6), Integer.valueOf(ruleBean.getOwnerId()));
+        variables.put(Integer.valueOf(7), Integer.valueOf(Status.AVAILABLE.getId()));
 
         executeUpdateWithPK(digester.getQuery("create"), variables, nullVars);
         if (isQuerySuccessful()) {
@@ -152,7 +152,7 @@ public class RuleDAO extends AuditableEntityDAO<RuleBean> {
         this.setTypesExpected();
 
         HashMap<Integer, Object> variables = new HashMap<Integer, Object>();
-        variables.put(new Integer(1), new Integer(ID));
+        variables.put(Integer.valueOf(1), Integer.valueOf(ID));
 
         String sql = digester.getQuery("findByPK");
         ArrayList<HashMap<String, Object>> alist = this.select(sql, variables);
@@ -168,7 +168,7 @@ public class RuleDAO extends AuditableEntityDAO<RuleBean> {
         this.setTypesExpected();
 
         HashMap<Integer, Object> variables = new HashMap<Integer, Object>();
-        variables.put(new Integer(1), new String(ruleBean.getOid()));
+        variables.put(Integer.valueOf(1), new String(ruleBean.getOid()));
 
         String sql = digester.getQuery("findByOid");
         ArrayList<HashMap<String, Object>> alist = this.select(sql, variables);
@@ -186,7 +186,7 @@ public class RuleDAO extends AuditableEntityDAO<RuleBean> {
         this.setTypesExpected();
 
         HashMap<Integer, Object> variables = new HashMap<Integer, Object>();
-        variables.put(new Integer(1), new String(oid));
+        variables.put(Integer.valueOf(1), new String(oid));
 
         String sql = digester.getQuery("findByOid");
         ArrayList<HashMap<String, Object>> alist = this.select(sql, variables);
@@ -204,7 +204,7 @@ public class RuleDAO extends AuditableEntityDAO<RuleBean> {
 
         HashMap<Integer, Object> variables = new HashMap<Integer, Object>();
         Integer eventCrfBeanId = Integer.valueOf(ruleSet.getId());
-        variables.put(new Integer(1), eventCrfBeanId);
+        variables.put(Integer.valueOf(1), eventCrfBeanId);
 
         String sql = digester.getQuery("findByRuleSet");
         ArrayList<HashMap<String, Object>> alist = this.select(sql, variables);
