@@ -383,7 +383,7 @@ public class SubjectDAO extends AuditableEntityDAO<SubjectBean> {
         }
         variables.put(ind++, sb.getUniqueIdentifier());
         // date_updated is set to now()
-        //    variables.put(new Integer(ind++), new java.util.Date());
+        //    variables.put(Integer.valueOf(ind++), new java.util.Date());
         variables.put(ind++, sb.getUpdater().getId());
         variables.put(ind++, sb.isDobCollected());
         variables.put(ind++, sb.getId());
