@@ -214,7 +214,7 @@ public abstract class CoreSecureController extends HttpServlet {
             addPageMessage(respage.getString("welcome") + " " + ub.getFirstName() + " " + ub.getLastName() + ". " + respage.getString("password_set"), request);
             // + "<a href=\"UpdateProfile\">" +
             // respage.getString("user_profile") + " </a>");
-            int pwdChangeRequired = new Integer(SQLInitServlet.getField("change_passwd_required")).intValue();
+            int pwdChangeRequired = Integer.valueOf(SQLInitServlet.getField("change_passwd_required")).intValue();
             if (pwdChangeRequired == 1) {
                 request.setAttribute("mustChangePass", "yes");
                 forwardPage(Page.RESET_PASSWORD, request, response);
@@ -589,17 +589,14 @@ public abstract class CoreSecureController extends HttpServlet {
                         try {
 							getServletContext().getRequestDispatcher(viewNotesURL).forward(request, response);
 						} catch (ServletException e) {
-							// TODO Auto-generated catch block
 							e.printStackTrace();
 						} catch (IOException e) {
-							// TODO Auto-generated catch block
 							e.printStackTrace();
 						}
                     } else if (p <= 0) {
                         try {
 							forwardPage(Page.VIEW_DISCREPANCY_NOTES_IN_STUDY, request, response);
 						} catch (Exception e) {
-							// TODO Auto-generated catch block
 							e.printStackTrace();
 						}
                     }
