@@ -177,7 +177,7 @@ public class EditSelectedServlet extends SecureController {
         }
         ArrayList<ItemBean> allSelectItems = selectAll ? selectAll(events, crfdao, idao) : ViewSelectedServlet.getAllSelected(db, idao, imfdao);
         // >> tbh
-        session.setAttribute("numberOfStudyItems", new Integer(ids.size()).toString());
+        session.setAttribute("numberOfStudyItems", Integer.valueOf(ids.size()).toString());
         // << tbh 11/2009
         session.setAttribute("allSelectedItems", allSelectItems);
         setUpStudyGroups();
@@ -197,8 +197,8 @@ public class EditSelectedServlet extends SecureController {
         CRFDAO crfdao = new CRFDAO(sm.getDataSource());
         ArrayList<ItemBean> allItems = selectAll(events, crfdao, idao);
         for(StudyEventDefinitionBean sed : events.keySet()) {
-            if (!db.getEventIds().contains(new Integer(sed.getId()))) {
-                db.getEventIds().add(new Integer(sed.getId()));
+            if (!db.getEventIds().contains(Integer.valueOf(sed.getId()))) {
+                db.getEventIds().add(Integer.valueOf(sed.getId()));
             }
         }
 
@@ -206,7 +206,7 @@ public class EditSelectedServlet extends SecureController {
         // ItemBean item = (ItemBean) allItems.get(j);
         // ArrayList ids = db.getItemIds();
         // ArrayList itemDefCrfs = db.getItemDefCrf();
-        // Integer itemId = new Integer(item.getId());
+        // Integer itemId = Integer.valueOf(item.getId());
         // if (!ids.contains(itemId)) {
         // ids.add(itemId);
         // itemDefCrfs.add(item);
