@@ -184,7 +184,6 @@ public class CreateStudyServlet extends SecureController {
         timingMap.put("retrospective", resadmin.getString("retrospective"));
         timingMap.put("prospective", resadmin.getString("prospective"));
         // } catch (NullPointerException e) {
-        // TODO Auto-generated catch block
         // e.printStackTrace();
         // }
     }
@@ -521,7 +520,7 @@ public class CreateStudyServlet extends SecureController {
 
         errors = v.validate();
         boolean isInterventional = updateStudy2();
-        session.setAttribute("isInterventionalFlag", new Boolean(isInterventional));
+        session.setAttribute("isInterventionalFlag", Boolean.valueOf(isInterventional));
 
         if (errors.isEmpty()) {
             logger.info("no errors");
